<resources>
    <string name="app_name">人脸对比软件</string>
    <string name="company_name">江苏秒联科技有限公司</string>
    <string name="please_shot_facial">请拍摄脸部\n以确保本人操作</string>
    <string name="put_the_face_into_the_box">请将脸部对准框内，保持光线充足</string>
    <string name="recode_management">记录管理</string>
    <string name="current_version">当前版本</string>
    <string name="versionName">20170503</string>
    <string name="versionCode">20170503</string>
    <string name="check_update">检查更新</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="OTG_READ_CARD">OTG读卡</string>
    <string name="NFC_READ_CARD">NFC读卡</string>
    <string name="OCR_READ_CARD">OCR读卡</string>
    <string name="CAMERA_READ_CARD">身份证拍照</string>
    <string name="BLUETOOTH_READ_CARD">蓝牙读卡</string>
    <string name="SERIALPORT_READ_CARD">串口读卡</string>
    <string name="CONFIDENCE_TOO_LOW">相似度过低,相似度:</string>
    <string name="EXCEPTION_OCCURRED">发生异常:</string>
    <string name="FACE_ALIGNMENTING_AND_WAIT">对比中请等待</string>
    <string name="FACE_ALIGNMENT_FALIED">对比失败</string>
    <string name="FACE_ALIGNMENT_SUCCESS">对比成功</string>
    <string name="FACE_ALIGNMENT_SETTING">人脸比对设置</string>
    <string name="NO_FACE_CAPTURED">未捕获到人脸</string>
    <string name="READING_IDCARD_AND_WAIT">读身份证中请等待</string>
    <string name="READ_IDCARD_SUCCESS">读身份证成功</string>
    <string name="READ_IDCARD_FAILED">读身份证失败</string>
    <string name="ID_CARD_SETTING">身份证读卡设置</string>
    <string name="NFC_ACTIVE">NFC激活</string>
    <string name="ABOUT">关于</string>
    <string name="SETTING">设置</string>
    <string name="CONFIDENCE_SETTING">相似度设置</string>
    <string name="MIN_CONFIDENCE">最小相似度</string>
    <string name="PEOPLE_CARD_ALIGNMENT">人证比对</string>
    <string name="IDCARD_INFO">身份证信息</string>
    <string name="ALIGNMENT_INFO">验证信息</string>
    <string name="CANCEL">取消</string>
    <string name="PLEASE_SELECT_READ_IDCARD_METHOD">请选择读卡方式</string>
    <string name="PLEASE_CHOOSE_CAMERA">请选择摄像头</string>
    <string name="PLEASE_CHOOSE_DEGREE">摄像头旋转角度</string>
    <string name="SET_READ_IDCARD_METHOD">设置读卡方式</string>
    <string name="CURRENT_READ_IDCARD_METHOD">当前读卡方式</string>
    <string name="SET_DECODE_SERVER">设置解码服务器</string>
    <string name="CURRENT_DECODE_SERVER">当前解码服务器</string>
    <string name="DECODE_SERVER_AUTO">自动</string>
    <string name="DECODE_SERVER_MANUAL">手动</string>
    <string name="DECODE_SERVER_ADDRESS_HINT">解码服务器IP地址</string>
    <string name="DECODE_SERVER_PORT_HINT">端口号</string>
    <string name="DO_NOT_SUPPORT_NFC">该设备不支持NFC</string>
    <string name="NFC_NOT_OPEN">NFC没有打开</string>
    <string name="CAMERA_SETTING">摄像头设置</string>
    <string name="CHOOSE_CAMERA">选择摄像头</string>
    <string name="CURRENT_CAMERA">当前摄像头</string>
    <string name="CURRENT_DEGREE">当前旋转角度</string>
    <string name="FRONT_CAMERA">前置摄像头</string>
    <string name="BACK_CAMERA">后置摄像头</string>
    <string name="ANY_CAMERA">任意摄像头</string>
    <string name="CHOOSE_CAMERA_PREVIEW_SIZE">选择摄像头预览尺寸</string>
    <string name="CURRENT_CAMERA_PREVIEW_SIZE">当前尺寸</string>
    <string name="CHOOSE">选择</string>
    <string name="DEBUG_SETTING">调试设置</string>
    <string name="SET_DEBUG_MODE">设置调试模式</string>
    <string name="SET_CAMERA_SLEEP">设置摄像头休眠</string>
    <string name="CURRENT_DEBUG_MODE">当前调试模式</string>
    <string name="CURRENT_CAMERA_SLEEP">当前摄像头休眠</string>
    <string name="OFF">关闭</string>
    <string name="ON">打开</string>
    <string name="DEBUG_ID">调试ID:</string>
    <string name="CAMERA_SLEEP_TIME_OUT_MS">摄像头休眠超时(毫秒)</string>
    <string name="RESET_SETTING">将设置重置为出厂设置</string>
    <string name="RESET">重置设置</string>
    <string name="RESET_SUCCESS">重置成功</string>
    <string name="DOWNLOAD_UPDATE_FAILED">下载更新失败</string>
    <string name="DOWNLOAD_UPDATE_SUCCESS">下载更新成功,准备安装更新</string>
    <string name="HAVE_DOWNLOADED">已下载:</string>
    <string name="FIND_NEW_VERSION">发现新版本,正在下载更新</string>
    <string name="CHECK_UPDATE_SERVICE_START_UP">软件更新服务启动</string>
    <string name="CHECK_UPDATE_SERVICE_TITLE">软件更新服务</string>
    <string name="CHECK_UPDATE_SERVICE_CONTENT">人脸比对软件更新服务</string>
    <string name="CHECK_UPDATE_IMMEDIATELY">立即检查更新</string>
    <string name="DELETE_ALL_RECORD">删除所有记录</string>
    <string name="EXPORT_RECORD">导出数据</string>
    <string name="FACE_ALIGNMENT_INFO">验证信息</string>
    <string name="WARNNING">警告</string>
    <string name="CONFIRM_CLEAR_DATABASE">确认清空数据库吗?</string>
    <string name="YES">是</string>
    <string name="NO">否</string>
    <string name="CONFIRM">确认</string>
    <string name="CONFIRM_EXPORT_RECORD">确认导出数据吗?</string>
    <string name="EXPORT_RECORD_FAILED">导出数据失败</string>
    <string name="EXPORT_RECORD_SUCCESS">导出数据成功</string>
    <string name="CLOSE">关闭</string>
    <string name="OK">确定</string>
    <string name="ID_NUMBER">身份证号码</string>
    <string name="NAME">姓名</string>
    <string name="SEX">性别</string>
    <string name="BIRTHDAY">出生日期</string>
    <string name="NATION">民族</string>
    <string name="ADDRESS">家庭住址</string>
    <string name="ISSUE_AUTHORITY">签证机关</string>
    <string name="TERM_BEGIN">办证时间</string>
    <string name="TERM_END">身份证截至时间</string>
    <string name="SIMILARITY">相似度</string>
    <string name="RECORD_TIME">记录时间</string>
    <string name="DEVICE_ID">设备ID:</string>
    <string name="JUMP_PAGE">跳转</string>
    <string name="INPUT_PAGE_INDEX">输页号</string>
    <string name="DO_FACE_ALIGNMENT">进行人脸对比</string>
    <string name="PLEASE_TAKE_PHOTO">请拍照</string>
</resources>
