<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_marginBottom="1dp"
    android:background="@android:color/white"
    android:clickable="true"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/recordTimeTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/RECORD_TIME" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/similarityTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/SIMILARITY" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/idNumberTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/ID_NUMBER" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/nameTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/NAME" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/sexTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/SEX" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/birthdayTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/BIRTHDAY" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/nationTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/NATION" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/addressTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/ADDRESS" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/issueAuthorityTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/ISSUE_AUTHORITY" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/termBeginTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/TERM_BEGIN" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/termEndTv"
        style="@style/TableRowTextViewStyle"
        android:text="@string/TERM_END" />
</LinearLayout>