<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miaolian.facead.view.IDCardSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/PrefTitleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SET_READ_IDCARD_METHOD" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/PrefTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/CURRENT_READ_IDCARD_METHOD" />

                <Button
                    android:id="@+id/selectLinkTypeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_bg1"
                    android:text="@string/NFC_READ_CARD"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>


        <com.miaolian.facead.view.MyExpandableView
            android:id="@+id/setDecodeServerPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PrefTitleTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SET_DECODE_SERVER" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/PrefTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/CURRENT_DECODE_SERVER" />

                    <Button
                        android:id="@+id/setDecodeServerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_bg1"
                        android:text="@string/DECODE_SERVER_AUTO"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/addrEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/DECODE_SERVER_ADDRESS_HINT"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/portEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/DECODE_SERVER_PORT_HINT"
                    android:textSize="20sp" />
            </LinearLayout>


        </com.miaolian.facead.view.MyExpandableView>

    </LinearLayout>

</ScrollView>
