<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miaolian.facead.view.CameraSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/PrefTitleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CHOOSE_CAMERA" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/PrefTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/CURRENT_CAMERA" />

                <Button
                    android:id="@+id/chooseCameraBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_bg1"
                    android:text="@string/FRONT_CAMERA"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/PrefTitleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PLEASE_CHOOSE_DEGREE" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/PrefTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/CURRENT_DEGREE" />

                <Button
                    android:id="@+id/chooseRotateDegreeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_bg1"
                    android:text="0°"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>

        <com.miaolian.facead.view.MyExpandableView
            android:id="@+id/setCameraSleepPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/PrefTitleTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SET_CAMERA_SLEEP" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/PrefTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/CURRENT_CAMERA_SLEEP" />

                    <Button
                        android:id="@+id/setCameraSleepBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/button_bg1"
                        android:text="@string/OFF"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CAMERA_SLEEP_TIME_OUT_MS"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/cameraSleepTimeOutEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:textSize="15sp" />
            </LinearLayout>


        </com.miaolian.facead.view.MyExpandableView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                style="@style/PrefTitleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CHOOSE_CAMERA_PREVIEW_SIZE" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/PrefTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/CURRENT_CAMERA_PREVIEW_SIZE" />

                <TextView
                    android:id="@+id/currentCameraPreviewSizeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/textView4"
                    android:text="800x600"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/chooseCameraPreviewSizeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_bg1"
                    android:text="@string/CHOOSE"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>